# pottery-glazing-mcp

./: README.md  pyproject.toml
pottery_glazing_mcp/: __init__.py  glaze_processor.py  glazing_olog.yaml  server.py
pottery_glazing_mcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: __init__.py  test_glaze_processor.py
