[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pottery-glazing-mcp"
version = "0.1.0"
description = "MCP server for pottery glazing chemistry visual parameter encoding"
authors = [{name = "Dal", email = "dal@example.com"}]
requires-python = ">=3.9"
dependencies = [
    "mcp>=1.21.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.setuptools.packages]
find = {}

[tool.setuptools.package-data]
pottery_glazing_mcp = ["*.yaml"]