[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pottery-glazing-mcp"
version = "0.1.0"
description = "MCP server for pottery glazing chemistry visual parameter encoding"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
]

[tool.setuptools.packages]
find = {}

[tool.setuptools.package-data]
pottery_glazing_mcp = ["*.yaml"]